# sturdy-stats-sdk

./: .gitignore  README.md  build.sh  db_models.py  helper-funcs.py  openapi.json  pyproject.toml  sdk_config.json  setup.py
scripts/: gen_sdk.py
sturdystats/: __init__.py  base.py  clfbase.py  clfmodel.py  dataset.py  index.py  job.py  model.py
tests/: concurrency.py  smoke_test.py  smoke_test_clf.py
