[project]
name = "sturdy-stats-sdk"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sturdystats"]
