[project]
name = "sturdy-stats-sdk"
version = "2.0.5"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "duckdb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sturdystats"]
